# powabase-examples

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml
backend/: .env.example  README.md  pyproject.toml
backend/schema/: 0001_init.sql  0002_business_profiles.sql  0003_research_sources.sql  0005_content_templates.sql  0006_grounding_report.sql  0007_authz_comments.sql  0008_scouts.sql  0010_list_indexes.sql  0011_multi_org.sql  0013_org_invite_tokens.sql
backend/scripts/: apply_schema.py  probe_import_url.py  probe_kb.py  probe_kb_scoping.py  probe_reranker.py  probe_web_search.py  verify_brief.py  verify_business_profiles.py  verify_research.py
backend/src/rankforge_backend/: auth.py  config.py  db.py  main.py  scheduler.py  tasks.py  util.py
backend/src/rankforge_backend/models/: article.py  brief.py  comment.py  profile.py  research.py  scout.py  template.py
backend/src/rankforge_backend/powabase/: client.py
backend/src/rankforge_backend/routes/: account.py  articles.py  brief.py  business_profiles.py  deps.py  health.py  org.py  publish.py  research.py  scouts.py  sources.py  templates.py
backend/src/rankforge_backend/services/: __init__.py  account.py  agents.py  brief.py  org.py  (+10 more)
backend/tests/: conftest.py  test_account.py  test_articles.py  test_auth.py  test_brief.py  test_business_profiles.py  test_comments.py  test_geo_optimize.py  test_grounding.py  test_health.py  test_org.py  test_powabase_client.py  test_publishing.py  test_quality.py  test_research.py  test_revise.py  test_scoring.py  test_scouts.py  test_tasks.py
(+248 files in other folders)
